# IN104-miniWolfram

./: .clang-format  .gitmodules  README.md  hugo.yml  utils.c
.github/workflows/: hugo.yaml
content/: _index.en.md  _index.fr.md
content/must_known/: _index.en.md  _index.fr.md
content/must_known/additional-resources/: _index.en.md  _index.fr.md
content/must_known/first-step/: _index.en.md  _index.fr.md
content/must_known/git basics/: _index.en.md  _index.fr.md
content/project/: _index.en.md  _index.fr.md
content/project/additional-resources/: _index.en.md  _index.fr.md
content/project/description/: _index.en.md  _index.fr.md
content/project/first-step/: _index.en.md  _index.fr.md
content/project/given-code/: _index.en.md  _index.fr.md
content/submission/: _index.en.md  _index.fr.md
content/submission/evaluation/: _index.en.md  _index.fr.md
content/submission/submission/: _index.en.md  _index.fr.md
given/: utils.c
public/: 404.html  index.html  index.xml  sitemap.xml
public/categories/: index.html  index.xml
public/project/: index.html  index.xml
public/project/additional-resources/: index.html  index.xml
public/project/beginning/: index.html  index.xml
public/project/description/: index.html  index.xml
public/project/first-step/: index.html  index.xml
public/project/given-code/: index.html  index.xml
public/project/guidelines/: index.html  index.xml
public/project/overview/: index.html  index.xml
public/submission/: index.html  index.xml
public/submission/evaluation/: index.html  index.xml
public/tags/: index.html  index.xml
ref/: .gitignore  CMakeLists.txt  Makefile  README.md
ref/src/: eval.c  eval.h  lexer.c  miniWolfram.c  parser.h
src/: eval.c  lexer.c  lexer.h  miniWolfram.c  parser.c  utils.c  utils.h
test/: test_eval.cc  test_lexer.cc  test_parser.cc  tests_utils.cc  tests_utils.h
(+4 files in other folders)
